--- a/src/main/webapp/partials/history/create.html
+++ b/src/main/webapp/partials/history/create.html
@@ -1,12 +1,12 @@
 <div class="page-header">
-	<h3>Create</h3>
+	<h3>Create history entry</h3>
 </div>
 
 <form class="form-horizontal">
 	<div class="form-group">
 		<label class="control-label col-sm-2" for="content">Content</label>
 		<div class="col-sm-10">
-			<textarea ng-model="newsEntry.content" id="content" class="form-control" rows="10">{{newsEntry.content}}</textarea>
+			<textarea ng-model="history.content" id="content" class="form-control" rows="10">{{history.content}}</textarea>
 		</div>
 	</div>
 	<div class="form-group">
