--- a/src/main/webapp/partials/history/index.html
+++ b/src/main/webapp/partials/history/index.html
@@ -1,17 +1,27 @@
+
 <div class="pull-right">
-	<a href="#!/create" class="btn btn-default" ng-show="hasRole('admin')" title="Create"><span class="glyphicon glyphicon-plus"></span></a>
+    <!--<a href="#!/create" class="btn btn-default" ng-show="hasRole('admin')" title="Create"><span class="glyphicon glyphicon-plus"></span></a>-->
+    <a href="#!/createHistory" class="btn btn-default" title="Create"><span class="glyphicon glyphicon-plus"></span></a>
 </div>
 <div class="page-header">
-	<h3>News</h3>
+    <h3>History</h3>
 </div>
 
-<div ng-repeat="newsEntry in newsEntries">
-	<hr />
-	<div class="pull-right">
-		<a href="" ng-click="deleteEntry(newsEntry)" class="btn btn-xs btn-default" ng-show="hasRole('admin')" title="delete"><span class="glyphicon glyphicon-trash"></span></a>
-		<a href="#!/edit/{{newsEntry.id}}" class="btn btn-xs btn-default" ng-show="hasRole('admin')" title="edit"><span class="glyphicon glyphicon-pencil"></span></a>
-	</div>
-	<h4>{{newsEntry.date | date}}</h4>
-	<p>{{newsEntry.content}}</p>
-</div>
+<table ng-table="history" class="table ng-table-responsive">
+    <tr ng-repeat="user in history">
+        <td data-title="'Date'">
+            {{user.date| date}}
+        </td>
+        <td data-title="'Action'">
+            {{user.content}}
+        </td>
+        <td data-title="'Edit'" ng-show="hasRole('admin')">
+            <a href="#!/edit/{{historyEntry.id}}" class="btn btn-xs btn-default" ng-show="hasRole('admin')" title="edit"><span class="glyphicon glyphicon-pencil"></span></a>
+        </td>
+         <td data-title="'Edit'" ng-show="hasRole('admin')">
+            <a href="" ng-click="deleteEntry(historyEntry)" class="btn btn-xs btn-default" ng-show="hasRole('admin')" title="delete"><span class="glyphicon glyphicon-trash"></span></a>
+        </td>
+    </tr>
+</table>
+
 <hr />
