--- a/src/main/webapp/partials/history/index.html
+++ b/src/main/webapp/partials/history/index.html
@@ -6,20 +6,19 @@
 <div class="page-header">
     <h3>History</h3>
 </div>
+<button ng-click="tableParams.reload()" class="btn btn-default">Reload</button>
+<button ng-click="tableParams.sorting({})" class="btn btn-default">Clear sorting</button>
 
-<table ng-table="history" class="table ng-table-responsive">
-    <tr ng-repeat="user in history">
-        <td data-title="'Date'">
-            {{user.date| date}}
-        </td>
-        <td data-title="'Action'">
-            {{user.content}}
-        </td>
+<table ng-table="tableParams" class="table ng-table-responsive">
+    <tr ng-repeat="hist in $data">
+        <td data-title="'Type'">{{hist.type}}</td>
+        <td data-title="'Date'">{{hist.date | date:'yyyy-MM-dd HH:mm:ss'}}</td>
+        <td data-title="'Action'">{{hist.content}}</td>
         <td data-title="'Edit'" ng-show="hasRole('admin')">
-            <a href="#!/edit/{{historyEntry.id}}" class="btn btn-xs btn-default" ng-show="hasRole('admin')" title="edit"><span class="glyphicon glyphicon-pencil"></span></a>
+            <a href="#!/edit/{{hist.id}}" class="btn btn-xs btn-default" ng-show="hasRole('admin')" title="edit"><span class="glyphicon glyphicon-pencil"></span></a>
         </td>
          <td data-title="'Edit'" ng-show="hasRole('admin')">
-            <a href="" ng-click="deleteEntry(historyEntry)" class="btn btn-xs btn-default" ng-show="hasRole('admin')" title="delete"><span class="glyphicon glyphicon-trash"></span></a>
+            <a href="" ng-click="deleteEntry(hist)" class="btn btn-xs btn-default" ng-show="hasRole('admin')" title="delete"><span class="glyphicon glyphicon-trash"></span></a>
         </td>
     </tr>
 </table>
