--- a/src/main/webapp/partials/rootResource/index.html
+++ b/src/main/webapp/partials/rootResource/index.html
@@ -1,18 +1,13 @@
 
-TEST MQNaaS!
-<br/>DataSet json with "dataSet| json": <br/>
-{{data| json}}
-<br/>DataSet json without "dataSet| json": <br/>
-{{data}}
-<br/>
-<p>The list has {{data.IRootResource.IRootResourceId.length}} items.</p>
-Test div repeat: <br/>
-<div ng-repeat="item in data.IRootResource.IRootResourceId">
-    {{item}}
-</div>
-<br/>Test li repeat: <br/>
-<li ng-repeat="person in data.IRootResource.IRootResourceId" ng-init="id=$index;">
-    Element with id: {{id}}: <span>{{person}}</span>
+<h3>IRootResources</h3>
+
+<br/>Availables Root resources: <br/>
+<li ng-repeat="resource in data.IRootResource.IRootResourceId" ng-init="id=$index;">
+    {{id}}: <b>{{resource}}</b> 
+    <a href="#!/info/{{id}}" class="btn btn-xs btn-default" title="info"><span class="glyphicon glyphicon-search"></span></a>
+    <a href="" ng-click="deleteEntry(resource)" class="btn btn-xs btn-default" title="delete"><span class="glyphicon glyphicon-trash"></span></a>
 </li>
 
-Test end!
+<a href="">Create</a>
+<a href="" ng-click="create()" class="btn btn-xs btn-default" title="create"><span class="glyphicon glyphicon-upload"></span></a>
+
