--- a/src/main/webapp/partials/rootResource/index.html
+++ b/src/main/webapp/partials/rootResource/index.html
@@ -4,7 +4,7 @@
 <br/>Availables Root resources: <br/>
 <li ng-repeat="resource in data.IRootResource.IRootResourceId" ng-init="id=$index;">
     {{id}}: <b>{{resource}}</b> 
-    <a href="#!/info/{{id}}" class="btn btn-xs btn-default" title="info"><span class="glyphicon glyphicon-search"></span></a>
+    <a href="#!/info/{{resource}}" class="btn btn-xs btn-default" title="info"><span class="glyphicon glyphicon-search"></span></a>
     <a href="" ng-click="deleteEntry(resource)" class="btn btn-xs btn-default" title="delete"><span class="glyphicon glyphicon-trash"></span></a>
 </li>
 
