Some html changes and rootResourceController

--- a/src/main/webapp/partials/rootResource/index.html
+++ b/src/main/webapp/partials/rootResource/index.html
@@ -10,6 +10,5 @@
     <a href="" ng-click="deleteEntry(resource)" class="btn btn-xs btn-default" title="delete"><span class="glyphicon glyphicon-trash"></span></a>
 </li>
 
-<a href="">Create</a>
-<a href="" ng-click="create()" class="btn btn-xs btn-default" title="create"><span class="glyphicon glyphicon-upload"></span></a>
+<a href="" ng-click="createNetwork()" class="btn btn-xs btn-default" title="Create Network">Create Network</a>
 
