SODALES statistics problem solved.

--- a/src/main/webapp/partials/sodales/counterStats.html
+++ b/src/main/webapp/partials/sodales/counterStats.html
@@ -1,17 +1,16 @@
-<table ng-table="tableParams" class="table ng-table-responsive">
-    <tr ng-repeat="item in $data"  ng-init="id=$index;">
-        <td data-title="'Eth ID'" class="col-sm-2 col-md-2 col-lg-2">{{item}}</td>
-        <td data-title="'HighLayer'" class="col-sm-1 col-md-1 col-lg-1">{{item.rx._collisions }}</td>
-        <td data-title="'Admin'" class="col-sm-1 col-md-1 col-lg-1">{{item._dropEvents}}</td>
+Statistics:
+{{content}} 
+<table border="1">
+    <tr>
+        <th>VAlue</th>
+        <th ng-repeat="header in content.headers">{{header}}</th>
+    </tr>
+    <tr>
+        <td>DropEvents</td>
+        <td ng-repeat="ary in content.values._dropEvents">{{ary}}</td>
+    </tr>
+    <tr>
+        <td>Octets</td>
+        <td ng-repeat="ary in content.values._octets">{{ary}}</td>
     </tr>
 </table>
-
-<!--
-<table class="table ng-table-responsive">
-    <tr ng-repeat="counters in vars">
-        <td data-title="'Eth ID'" class="col-sm-2 col-md-2 col-lg-2">{{counters.tx._collisions}}</td>
-        <td data-title="'HighLayer'" class="col-sm-1 col-md-1 col-lg-1">{{counters.rx._collisions }}</td>
-        <td data-title="'Admin'" class="col-sm-1 col-md-1 col-lg-1">{{iface._admin }}</td>
-    </tr>
-</table>
--->
