--- a/src/main/webapp/partials/sodales/oa_dash.html
+++ b/src/main/webapp/partials/sodales/oa_dash.html
@@ -13,8 +13,16 @@
         <td data-title="'Created date'" sortable="'date'" class="col-sm-2 col-md-2 col-lg-2">{{iface.date| date:'yyyy-MM-dd HH:mm:ss'}}</td>
         <td data-title="'VI List'" sortable="'date'" class="col-sm-2 col-md-2 col-lg-2">{{iface.vi}}</td>
         <td data-title="'Add VI'" sortable="'type'" class="col-sm-1 col-md-1 col-lg-1">
-            <select ng-model="selectedVi" ng-options="item as item.name for item in listVi"></select>
-            <a href="" ng-click="addVI(iface.id, selectedVi)" title="View">Add</a>
+            <select ng-model="selectedAddVi">
+                <option ng-repeat="item in listVi| viDuplicates:iface.vi">{{item}}</option>
+            </select> 
+            <a href="" ng-click="addVI(iface.id, selectedAddVi)" title="View">Add</a>
+        </td>
+        <td data-title="'Remove VI'" sortable="'type'" class="col-sm-1 col-md-1 col-lg-1">
+            <select ng-model="selectedRemoveVi">
+                <option ng-repeat="item in iface.vi">{{item}}</option>
+            </select> 
+            <a href="" ng-click="removeVI(iface.id, selectedRemoveVi)" title="View">Remove</a>
         </td>
     </tr>
 </table>
