TODO features in statistics

--- a/src/main/webapp/partials/sodales/statistics.html
+++ b/src/main/webapp/partials/sodales/statistics.html
@@ -1,3 +1,7 @@
+Resource
+ARN
+CPE
+
 <table ng-table="tableParams" class="table ng-table-responsive">
     <tr ng-repeat="iface in $data">
         {{iface}}
