--- a/src/main/webapp/partials/sodales/counterStats.html
+++ b/src/main/webapp/partials/sodales/counterStats.html
@@ -33,7 +33,7 @@
     </tr>
     <tr>
         <td>Oversize Packets</td>
-        <td ng-repeat="ary in content.values._oversizePackets Packets track by $index">{{ary}}</td>
+        <td ng-repeat="ary in content.values._oversizePackets track by $index">{{ary}}</td>
     </tr>
     <tr>
         <td>Fragments</td>
@@ -61,7 +61,7 @@
     </tr>
     <tr>
         <td>Packets 256 to 511 octets</td>
-        <td ng-repeat="ary in content.values._packets156to511Octets track by $index">{{ary}}</td>
+        <td ng-repeat="ary in content.values._packets256to511Octets track by $index">{{ary}}</td>
     </tr>
     <tr>
         <td>Packets 512 to 1023 octets</td>
