Grapg directive implementes drag and drop correctly. Editor view only shows the arn & cpe resources

--- a/src/main/webapp/partials/d3/editor.html
+++ b/src/main/webapp/partials/d3/editor.html
@@ -1,5 +1,10 @@
 <div id="stencil">
-    <div class="ui-widget-content netEl-drag" id="ofSwitch" draggable><img src="../plugin/img/ofSwitch.png" width="60"></div>
+    <div class="ui-widget-content netEl-drag" id="ofSwitch" draggable>
+        <img id="arn" draggable src="../plugin/img/SODALES_ARN.png" width="60"> ARN
+    </div>
+    <div class="ui-widget-content netEl-drag" id="ofSwitch" draggable>
+        <img id="cpe" draggable src="../plugin/img/SODALES_CPE.png" width="60"> CPE
+    </div>
 </div>
 <div id="graph" droppable>
     <div id="info_message" class="ui-widget" style="display:none; position:absolute; width: 78%">
