--- a/src/main/webapp/partials/network/mgt.html
+++ b/src/main/webapp/partials/network/mgt.html
@@ -20,9 +20,13 @@
 
     <div class="row">
         <div class="col-md-12">
-            Network actions, insert flows?
+		<div class="panel panel-default">
+	            <div class="panel-heading">
+        	        <h4>Network actions</h4>
+	            </div>
+		Actions: insert flows end-to-end
+            </div>
+        </div>
         </div>
     </div>
-
-
 </div>
