--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -39,3 +39,11 @@ footer {
    margin-left:10px;
    padding:8px;
 }
+
+.insertFlow-labels{
+    display: inline-block;
+  max-width: 100%;
+  margin-bottom: 5px;
+  font-weight: bold;
+  width: 100px;
+}
