--- a/src/main/webapp/partials/network/modalCreateNetwork.html
+++ b/src/main/webapp/partials/network/modalCreateNetwork.html
@@ -7,12 +7,12 @@
                     </div>
                     <div class="modal-body">
                         <form>
-                            Description: <input type="text" ng-model="network.description" /><br/>
-                            Endpoint: <input type="text" ng-model="network.endpoint" placeholder="{{network.endpoint}}" value="{{network.endpoint}}"/><br/>
-                            Type: <input type="text" ng-model="network.type" placeholder="{{network.type}}" value="{{network.type}}"/><br/>
-                            User: <input type="text" ng-model="network.user" /><br/>
-                            Password: <input type="text" ng-model="network.password" /><br/>
-                            <input type="submit" ng-click="createNetwork(network)" value="Insert" />
+                            <label class="insertFlow-labels">Description:</label> <input type="text" ng-model="network.description" /><br/>
+                            <label class="insertFlow-labels">Endpoint:</label> <input type="text" ng-model="network.endpoint" placeholder="{{network.endpoint}}" value="{{network.endpoint}}"/><br/>
+                            <label class="insertFlow-labels">Type:</label> <input type="text" ng-model="network.type" placeholder="{{network.type}}" value="{{network.type}}"/><br/>
+                            <label class="insertFlow-labels">User:</label> <input type="text" ng-model="network.user" /><br/>
+                            <label class="insertFlow-labels">Password:</label> <input type="text" ng-model="network.password" /><br/>
+                            <button type="button" class="btn btn-default" ng-click="createNetwork(network)">Insert</button>
                         </form>
                     </div>
                     <div class="modal-footer">
