--- a/src/main/webapp/partials/network/dash.html
+++ b/src/main/webapp/partials/network/dash.html
@@ -19,7 +19,7 @@
             <td>
                 <button type="button" ng-click="selectNetwork(row)" class="btn btn-sm btn-danger" ng-disabled="row === networkId">Select</button>
                 <button type="button" ng-click="selectNetwork(row)" class="btn btn-sm btn-danger" ng-disabled="row !== networkId">Unselect</button>
-                <button type="button" ng-click="removeItem(row)" class="btn btn-sm btn-danger"><i class="glyphicon glyphicon-remove-circle"></i>
+                <button type="button" ng-click="deleteDialog(row)" class="btn btn-sm btn-danger"><i class="glyphicon glyphicon-remove-circle"></i>
                 </button>
             </td>
         </tr>
