--- a/src/main/webapp/partials/options.html
+++ b/src/main/webapp/partials/options.html
@@ -5,15 +5,21 @@
             <div class="col-lg-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title"><i class="fa fa-history fa-fw"></i> Options1</h3>
+                        <h3 class="panel-title"><i class="fa fa-history fa-fw"></i> Endpoint</h3>
                     </div>
                     <div class="panel-body">
                         <div class="table-responsive">
-                            Ip and port of mqnaas config
+                            <form>
+                                IP: <input name="opt.ip"/>
+                                Port: <input name="opt.port"/>
+                                <button ng-click="update(opt)">Update</button>
+                            </form>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <!-- /.row -->
+    </div>
+</div>
 
